# dgad

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  demo.py  ea25d75c.txt  pyproject.toml  readme.md  skaffold.yaml  tbump.toml
ci/: badges.yaml  branch.yaml  release.yaml
demo/: demo.py  domains.jsonl  domains.txt
dgad/: classification.py  cli.py  data_model.py  prediction.py  schema.py  utils.py
dgad/app/: cli.py
dgad/grpc/: api.py  classification_pb2.py  classification_pb2_grpc.py  classifier_client.py  classifier_server.py  prediction_pb2.py  prediction_pb2_grpc.py
dgad/grpc/protos/: classification.proto
dgad/label_encoders/: encoder_52_classes.npy  encoder_81_classes.npy
dgad/models/: lstm_best.h5
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
protos/: prediction.proto
race/: config-defaults.env  docker-compose.yml  readme.md
redis-worker/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
redis-worker/dgad_redis_worker/: run.py  worker.py
redis-worker/dgad_redis_worker/utils/: dga_producer.py
skaffold/: deployment.yaml  svc-clusterIP.yaml
tests/: test_classification.py  test_cli.py  test_prediction.py  test_schema.py  test_utils.py
tests/data/: cnn_model-fraunhofer_alexa.h5  domains_todo.csv  domains_todo.jsonl  domains_todo_1.csv  domains_todo_2.csv  domains_todo_labelled.csv  training_set-sample.csv
