[tool.poetry]
name = "dgad"
version = "3.1.2"
description = ""
authors = ["Federico Falconieri <federico.falconieri@tno.nl>","Irina Chiscop <irina.chiscop@tno.nl>"]
license = "Apache-2.0"
include = ["dgad/models/*.h5"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
pandas = "^1.1.5"
tldextract = "^3.1.2"
redis = "^3.5.3"
numpy = "^1.19.5"
keras-tcn = "^3.2.1"
grpcio = "^1.34"
pip = "^21.1.2"
tensorflow-cpu = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
bandit = "^1.7.0"
pylint-junit = "^0.3.2"
safety = "^1.9.0"
mypy = "^0.800"
vulture = "^2.3"
pre-commit = "^2.11.1"
isort = "^5.8.0"
pytest-xdist = "^2.2.1"
tuna = "^0.5.6"
grpcio-tools = "^1.34"
wheel-inspect = "^1.7.0"
pylic = "^2.0.8"
tbump = "^6.3.2"
build = "^0.7.0"
twine = "^3.6.0"

[tool.poetry.scripts]
dgad = 'dgad.app.cli:main'

[tool.pylint."messages control"]
disable = ["missing-module-docstring","missing-function-docstring"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
build_command = "pip install poetry && poetry build"

[tool.pylic]
safe_licenses = [
    "Apache Software License",
    "MIT License",
    "BSD License",
    "Apache 2.0",
    "MIT",
    "Python Software Foundation License",
    "3-Clause BSD License",
    "Public Domain",
    "BSD",
    "Mozilla Public License 2.0 (MPL 2.0)",
]
