[tool.poetry]
name = "dgad"
version = "3.1.3"
description = "Classifies DGA domains"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
include = ["dgad/models/*.h5"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
pandas = "^1"
tldextract = "^3"
grpcio = "^1"
keras-tcn = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgad = 'dgad.app.cli:main'
