[tool.poetry]
name = "dgad"
version = "4.1.0"
description = "Classifies DGA domains"
authors = ["Federico Falconieri <federico.falconieri@tno.nl>","Irina Chiscop <irina.chiscop@tno.nl>"]
license = "Apache-2.0"
include = ["dgad/models/*.h5", "dgad/label_encoders/*.npy"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
tldextract = "^3.3.1"
grpcio = "^1.47.0"
keras-tcn = "^3.4.4"
scikit-learn = "^1.1.1"
tensorflow = "^2.9.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pylint = "^2.14.5"
grpcio-tools = "^1.47.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgad = 'dgad.cli:cli'
